a little more text

--- a/examples/misc-examples.ipynb
+++ b/examples/misc-examples.ipynb
@@ -36,7 +36,12 @@
     "- the estimated $\\tilde B$ matrix\n",
     "- the estimated $B$ matrix\n",
     "\n",
-    "Note that the estimated $B$ and $\\tilde B$ matrices are only expected to be consistent up to a permutation of rows and columns."
+    "Note that the estimated $B$ and $\\tilde B$ matrices are only expected to be consistent up to a permutation of rows and columns.\n",
+    "\n",
+    "For further exploration, the function `run_simulation` takes additional arguments not demonstrated here:\n",
+    "\n",
+    "- `ignore_communities`: If `True`, fits a GLM ignoring any latent structure. (Technically, fits a $K=1$ latent block model, but this is equivalent.)\n",
+    "- `ignore_covariates`: If `True`, fits ordinary spectral clustering without partitioning the network by covariates. In some cases, this works well, depending on the relative magnitude of the covariate effects vs. latent block model coefficients."
    ]
   },
   {
