--- a/examples/simpsons-paradox.ipynb
+++ b/examples/simpsons-paradox.ipynb
@@ -69,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb2fb0bc5b0>"
+       "<matplotlib.image.AxesImage at 0x7f3a2bc10550>"
       ]
      },
      "execution_count": 3,
@@ -113,7 +113,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.LineCollection at 0x7fb2fb1015a0>"
+       "<matplotlib.collections.LineCollection at 0x7f3a2bc58c40>"
       ]
      },
      "execution_count": 4,
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "array([0.10778947])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
